# fyp

./: AGENT_SETUP.md  BUG_FIXES.md  README.md  Reactive SIEM-Template -  05 - Project Report final (v2) (1).docx  test-server.rs
data/: alerts.json  registry.json
reactive/percepta-siem/: AGENT_DEPLOYMENT.md  CODE_AUDIT.md  DEPLOYMENT_READY.md  FIXES_APPLIED.md  PRODUCTION_STATUS.md  QUICK_START.md  README.md  WEB_DOWNLOAD_GUIDE.md  WINDOWS_DEMO_READY.md
reactive/percepta-siem/certs/: ca_cert.pem  server_cert.pem  server_key.pem
reactive/percepta-siem/server/: Cargo.toml  dashboard.html  rules.yaml
reactive/percepta-siem/server/certs/: ca.key  issued-1.crt  issued-1.key
reactive/percepta-siem/server/data/: percepta.db
reactive/percepta-siem/server/src/: alerts.rs  collector.rs  enroll.rs  gui.rs  main.rs  portal.rs  rule_engine.rs  search_api.rs  storage.rs  test_ingest.rs  tls.rs
reactive/percepta-siem/server/src/certificate_authority/: crl.rs  mod.rs  operations.rs
reactive/percepta-siem/server/static/downloads/: agent-responses.txt
siem-agent/: Cargo.toml
siem-agent/src/: main.rs
siem-server/: Cargo.toml
siem-server/src/: main.rs
windows-agent/: Cargo.toml
windows-agent/src/: main.rs
working rust-siem-v7-server-and-agent/: Cargo.toml
working rust-siem-v7-server-and-agent/siem-agent/: Cargo.toml
working rust-siem-v7-server-and-agent/siem-agent/src/: main.rs
working rust-siem-v7-server-and-agent/siem-server/: Cargo.toml
working rust-siem-v7-server-and-agent/siem-server/src/: main.rs
